<resources>
    <string name="app_name">Radio Community</string>
    <string name="title_activity_navigate">Radio Community</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Radio Community</string>
    <string name="nav_header_subtitle">Welcome!!!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="backwards">10</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="checkmark">\u2713</string>
    <string name="next">Next</string>
    <string name="dialog_row_play_now">Play Now</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="dialog_row_close">Close</string>
    <string name="close">Close</string>
    <string name="error_title">Error!</string>
    <string name="error_message">Error creating dialog. Please contact support.</string>
    <string name="nothing_to_play">Nothing To Play&#8230;</string>
    <string name="search_hint">Search NPR...</string>
    <string name="error_media_not_found">Media Download Error, Skipping...</string>
    <string name="recommendations_empty_string">No audio items found for </string>
    <string name="channel_warning">Warning!! The default supported channels are enabled. If you enable any other channels, assume they have not been tested in this app and may result in the app crashing. Use at your own risk.</string>
    <string name="station">Station</string>
    <string name="station_search_hint">Search for a station...</string>
    <string name="nav_item_channels">Channels</string>
    <string name="nav_item_auto_play">Auto Play Enabled</string>
    <string name="nav_item_queue_swipe_remove">Queue Swipe Remove</string>
    <string name="nav_item_station">Change Station</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_image_size">Image Cache:</string>
    <string name="nav_item_audio_size">Audio Cache:</string>
    <string name="nav_item_image_dialog_title">Image Cache Size</string>
    <string name="nav_item_image_dialog_message">This is the total size of the cached images. This job is run periodically in the background to clean up images.</string>
    <string name="nav_item_audio_dialog_title">Audio Cache Size</string>
    <string name="nav_item_audio_dialog_message">This is the size of the audio files that you have stored. When an item is removed from the queue the file is deleted from cache.</string>
    <string name="player_stopped">Player Stopped</string>
    <string name="rewind">Rewind 10 seconds</string>
    <string name="one_hundred_pecent_downloaded">100% Downloaded</string>
    <string name="in_download_queue">In Download Queue...</string>
    <string name="error_alert_message_default">There was an error accessing this data. Please check your internet or report this error to us.</string>
    <string name="error_alert_title_default">Error Retrieving Data</string>
    <string name="error_alert_title_recommendation">Error Retrieving Podcast Data</string>
    <string name="unknown">Unknown</string>
    <string name="buffering">Buffering</string>
    <string name="interested_button">Interestd In.</string>
    <string name="share">Share</string>
    <string name="error_playing">Error playing media.</string>
    <string name="waiting_for_internet">Waiting for internet...</string>
    <string name="error_download_generic">Error fetching data</string>
    <string name="media_player_click_here">Click Here</string>
    <string name="error_play_now_generic">Error playing now</string>
</resources>
