<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_station"
        android:icon="@drawable/ic_swap_horiz_black_24dp"
        android:title="@string/nav_item_station" />

    <item
        android:id="@+id/nav_channels"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/nav_item_channels" />

    <item
        android:id="@+id/nav_auto_play"
        android:enabled="true"
        android:title="@string/nav_item_auto_play"
        android:visible="true"
        app:actionLayout="@layout/menu_switch"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_queue_swipe_remove"
        android:enabled="true"
        android:title="@string/nav_item_queue_swipe_remove"
        android:visible="true"
        app:actionLayout="@layout/menu_switch"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/nav_item_logout" />

</menu>
