<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="Hey I am some text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dialog_single_title"
                        android:textSize="20dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_alignParentTop="true"/>
                    <TextView
                        android:text="asdfasdfasdft"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dialog_single_description"
                        android:textSize="15dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_below="@+id/dialog_single_title"/>

                    <TextView
                        android:id="@+id/dialog_single_href_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                </RelativeLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/add_to_queue"
                        android:id="@+id/dialog_single_button_add_to_queue"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/dialog_row_play_now"
                        android:id="@+id/dialog_single_button_play_now"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/dialog_row_close"
                        android:id="@+id/dialog_single_button_close"/>

                </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>