<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="Hey I am some text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_row_title"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"/>

            <TextView
                android:text="Description al;kdjf lkasjd ;lfkasjd;lfka jslkjasldkfjaowejf;oiawm;voiawnionaw;oif nawoeinf oawine f;oaiwne f;oiawnef nawefnawoienfoiawnefoinaw efoinaweo;if"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_row_description"
                android:textSize="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/dialog_row_title"
                android:layout_toStartOf="@+id/dialog_row_expand_collapse"
                android:minLines="2"
                android:maxLines="2"
                android:ellipsize="end"
                />

            <ImageButton
                android:id="@+id/dialog_row_expand_collapse"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/dialog_row_title"
                android:background="@drawable/ic_keyboard_arrow_up_white_24dp"
                android:contentDescription="@string/close"
                android:layout_marginEnd="10dp"
                android:rotation="180"
                android:backgroundTint="@color/colorDisabled"/>

            <TextView
                android:id="@+id/dialog_row_href_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </RelativeLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_to_queue"
                android:id="@+id/dialog_row_button_add_to_queue"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dialog_row_play_now"
                android:id="@+id/dialog_row_button_play_now"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>