<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Navigate">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/media_player_seek_bar_text_center">

        <TextView
            android:text="Media Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/media_player_title"
            android:textSize="35dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/media_player_date_time"
            android:text="Tile and Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/media_player_title"
            />

        <RelativeLayout
            android:id="@+id/media_player_button_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/media_player_date_time"
            android:layout_centerHorizontal="true"
            >

            <ImageButton
                android:id="@+id/media_player_share"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@drawable/ic_menu_share"
                android:backgroundTint="@color/colorPrimaryDark"
                android:contentDescription="@string/share"
                android:foreground="?selectableItemBackgroundBorderless"
                />

            <ImageButton
                android:id="@+id/media_player_like"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:layout_toEndOf="@+id/media_player_share"
                android:background="@drawable/ic_star_empty_white_24dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:contentDescription="@string/interested_button"
                android:foreground="?selectableItemBackgroundBorderless"
                />

        </RelativeLayout>

        <Button
            android:id="@+id/media_player_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/media_player_button_area"
            android:layout_centerHorizontal="true"
            android:minHeight="30dp"
            android:text="@string/media_player_click_here"
            android:visibility="gone"
            />

        <ScrollView
            android:layout_below="@+id/media_player_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/media_player_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/media_player_description"
                    android:layout_centerHorizontal="true"
                    />

                <TextView
                    android:id="@+id/media_player_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Description"
                    android:layout_centerHorizontal="true"
                    android:textColor="#939393"
                    android:textSize="20dp"
                    />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

    <SeekBar
        android:id="@+id/media_player_seek_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/media_player_seek_bar_text_right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Position Time"
        android:id="@+id/media_player_seek_bar_text_left"
        android:layout_alignBaseline="@+id/media_player_seek_bar_text_right"
        android:layout_alignBottom="@+id/media_player_seek_bar_text_right"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:id="@+id/media_player_seek_bar_text_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Scroll Time"
        android:layout_alignBaseline="@+id/media_player_seek_bar_text_right"
        android:layout_alignBottom="@+id/media_player_seek_bar_text_right"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Full Time"
        android:id="@+id/media_player_seek_bar_text_right"
        android:layout_above="@+id/media_player_seek_bar"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>